feat: added initial record and payment status query
