# docs/swagger.yaml
@@ -290,6 +290,36 @@ paths:
           $ref: "#/components/responses/NotFound"
         500:
           $ref: "#/components/responses/InternalServerError"
+  /payments/{id}:
+    get:
+      tags:
+        - Payments
+      summary: Busca um pagamento por id do pedido
+      parameters:
+        - name: id
+          in: path
+          required: true
+          description: Id do pedido
+          schema:
+            type: string
+      responses:
+        200:
+          description: Pagamento encontrado com sucesso
+          content:
+            application/json:
+              schema:
+                properties:
+                  data:
+                    $ref: "#/components/schemas/PaymentSchema"
+                  message:
+                    type: string
+                    description: Mensagem de sucesso.
+        400:
+          $ref: "#/components/responses/BadRequest"
+        404:
+          $ref: "#/components/responses/NotFound"
+        500:
+          $ref: "#/components/responses/InternalServerError"
 components:
   schemas:
     CreatedCustomerSchema:
@@ -511,6 +541,23 @@ components:
           type: string
           format: date-time
           description: Data de atualização do cliente.
+    PaymentSchema:
+      type: object
+      description: Propriedades de um pagamento de um pedido.
+      properties:
+        id:
+          type: string
+          description: Id do pagamento.
+        orderId:
+          type: string
+          description: Id do pedido.
+        status:
+          type: string
+          description: Status do pagamento.
+          enum:
+            - Received
+            - Paid
+            - NotPaid
   responses:
     BadRequest:
       description: Invalid Request
